Move Actuator docs into a separate module
See gh-46071